--- a/public/about/cv/index.html
+++ b/public/about/cv/index.html
@@ -31,11 +31,11 @@
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="containercv">
       <article class="cv">
 
         <section class="education">
-            <h1>Education</h1>
+            <h1 id="first">Education</h1>
             <div class="nyu">
                 <h3>New York University Master of Arts | class of 2021</h3>
             </div>
